tests/paczka1/small_fuzzy/98795354.err
Error in line 1: YL2H4 A646 80,3
Error in line 7: A854 A854 67,1
